syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GoodsService.Grps";

service GoodsServiceGrps {
  rpc V1AddGood(AddGoodRequestProto) returns (AddGoodResponseProto){
    option (google.api.http) = {
      post: "/v1/AddGood"
    };
  }

  rpc V1GetGoodsWithFilters(GetGoodsWithFiltersRequestProto) returns (GetGoodsWithFiltersResponseProto){
    option (google.api.http) = {
      get: "/v1/GetGoodsWithFilters"
    };
  }
  
  rpc V1GetGoodById(GetGoodByIdRequestProto) returns (GetGoodByIdResponseProto){
    option (google.api.http) = {
      get: "/v1/GetGoodById"
    };
  }
}

message AddGoodRequestProto{
  string name = 1;
  double price = 2;
  double weight = 3;
  GoodType good_type = 4;
  int32 number_stock = 5;
}

message AddGoodResponseProto{
  string id = 1;
}

message GetGoodsWithFiltersRequestProto{
  google.protobuf.Timestamp creation_date = 1;
  GoodType good_type = 2;
  google.protobuf.Int32Value number_stock = 3;
  int32 page_number = 4;
  int32 page_size = 5;
}

message GetGoodsWithFiltersResponseProto{
  repeated GetGoodByIdResponseProto goods = 1;
}

message GetGoodByIdRequestProto{
  string id = 1;
}

message GetGoodByIdResponseProto{
  string name = 1;
  double price = 2;
  double weight = 3;
  GoodType good_type = 4;
  google.protobuf.Timestamp creation_date = 5;
  int32 number_stock = 6;
}

enum GoodType {
  GOOD_TYPE_UNSPECIFIED = 0;
  GENERAL = 1;
  HOUSEHOLDCHEMICALS = 2;
  TECHNIC = 3;
  PRODUCTS = 4;
}